lorem-ipsum/infrastructure/local/istio/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: lorem-ipsum-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingress # use Istio default gateway implementation
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
      tls:
        httpsRedirect: true # sends 301 redirect for http requests
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "*"
      tls:
        mode: SIMPLE
        credentialName: lorem-ipsum-dev-ca-secret

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: lorem-ipsum-vs
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - lorem-ipsum-gateway
  http:
    - match:
        - uri:
            prefix: "/books"
      route:
        - destination:
            port:
              number: 80
            host: lorem-ipsum.dev.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: lorem-ipsum-auth-vs
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - lorem-ipsum-gateway
  http:
    - match:
        - uri:
            prefix: "/api/auth"
        - uri:
            prefix: "/api/users"
      route:
        - destination:
            port:
              number: 80
            host: lorem-ipsum-auth.demo.svc.cluster.local
